--- a/sbusjoystick.yml
+++ b/sbusjoystick.yml
@@ -1,7 +1,7 @@
 description: >
   Support for sbusjoystick-ardupilot-sitl
 match:
-  - LeafLabs Maple*
+  - SparkFun LilyPad USB*
 controls:
   - channel: 1
     type: axis
@@ -11,10 +11,10 @@ controls:
     id: 1
   - channel: 3
     type: axis
-    id: 2
+    id: 3
   - channel: 4
     type: axis
-    id: 3
+    id: 4
   - channel: 5
     type: multibutton
     buttons:
